fix: hide control buttons on mobile devices

--- a/components/backgroundVideo/video.module.css
+++ b/components/backgroundVideo/video.module.css
@@ -9,3 +9,8 @@
     height: 100vh;
     width: 100%;
 }
+
+.video::-webkit-media-controls{
+    display: none;
+    -webkit-appearance: none;
+}
